fix: better contrast for info alert shortcode close #45

--- a/assets/sass/theme/variables.sass
+++ b/assets/sass/theme/variables.sass
@@ -61,7 +61,7 @@ $scrollbar-rail-size: 0.5rem
 //
 // Shortcodes variables
 //
-$alert-info-color: lightskyblue
+$alert-info-color: paleturquoise
 $alert-success-color: lightgreen
 $alert-warning-color: khaki
 $alert-error-color: lightcoral
